--- a/BACKEND/package.json
+++ b/BACKEND/package.json
@@ -10,11 +10,16 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.7.2",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "express": "^4.19.2",
     "express-validator": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.1",
     "mongoose-unique-validator": "^5.0.1",
+    "multer": "^1.4.5-lts.1",
     "unique": "^0.0.1",
     "uuid": "^10.0.0"
   },
